bin/tests/errors/lexer/lex_err_missing_hex_digit.swg
#global fileprivate

0x // swc-expected-error {{lex_err_missing_hex_digit}}
